--- a/LinearRegression/model_sss.ipynb
+++ b/LinearRegression/model_sss.ipynb
@@ -2815,18 +2815,18 @@
    "source": [
     "##### Из анализа нашей тепловой карты (heatmap), можно выделить следующие зависимости цены автомобиля:\n",
     "1. **Сильные положительные зависимости**:\n",
-    "   - **\"max_torq\"**: Более высокий крутящий момент связан с мощностью и классом автомобиля, увеличивая его стоимость.\n",
-    "   - **\"cyl_count\"**: Больше цилиндров — сложнее двигатель, выше цена.\n",
-    "   - **\"max_speed\"**: Высокая скорость характерна для дорогих спортивных авто.\n",
+    "   - **\"max_torq\"**: Более высокий крутящий момент связан с мощностью и классом автомобиля, увеличивая его стоимость\n",
+    "   - **\"cyl_count\"**: Больше цилиндров — сложнее двигатель, выше цена\n",
+    "   - **\"max_speed\"**: Высокая скорость характерна для дорогих спортивных авто\n",
     "\n",
     "2. **Слабые или отрицательные зависимости**:\n",
-    "   - **\"acceleration\"**: Слабая корреляция с ценой, возможно, из-за нелинейных зависимостей.\n",
+    "   - **\"acceleration\"**: Слабая корреляция с ценой, возможно, из-за нелинейных зависимостей\n",
     "\n",
     "3. **Взаимозависимые признаки**:\n",
-    "   - **\"cyl_count\"**, **\"max_torq\"**: Сильно связаны с ценой через характеристики двигателя.\n",
+    "   - **\"cyl_count\"**, **\"max_torq\"**: Сильно связаны с ценой через характеристики двигателя\n",
     "\n",
     "4. **Потенциальные влияющие признаки**:\n",
-    "   - **\"fuel_cons\"**: Может слабо коррелировать с ценой, но важен для премиум-класса.\n",
+    "   - **\"fuel_cons\"**: Может слабо коррелировать с ценой, но важен для дальнейшего прогноза \n",
     "\n"
    ]
   },
@@ -4870,14 +4870,6 @@
    ],
    "source": [
     "df[df['year']<1970].head(30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Для прогнозирования цены автомобиля нужно отобрать признаки с сильной корреляцией с ценой (например, мощность двигателя, количество цилиндров), исключить избыточные признаки (мультиколлинеарность) и обработать категориальные данные. Важно устранить выбросы, масштабировать числовые признаки и протестировать разные модели: от простых (линейная регрессия, дерево решений) до сложных (Random Forest, XGBoost). Методы нелинейного моделирования предпочтительны из-за сложных зависимостей. Для оценки качества модели использовать метрики RMSE, MAE, R² и перекрёстную валидацию. Так как правильная подготовка данных и выбор моделей обеспечат точное прогнозирование."
    ]
   },
   {
@@ -7593,6 +7585,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Вывод**\n",
+    "\n",
+    "Для дальнейшего прогнозирования цены автомобиля нужно:\n",
+    "\n",
+    "1. **Подготовка данных:**\n",
+    "   - Отобрать признаки, которые имеют сильную корреляцию с ценой (например, мощность двигателя, количество цилиндров)\n",
+    "   - Исключить избыточные признаки, чтобы избежать мультиколлинеарности\n",
+    "   - Обработать категориальные данные (с помощью One-Hot Encoding или других методов)\n",
+    "   - Устранить выбросы и масштабировать числовые признаки для повышения качества моделей\n",
+    "\n",
+    "2. **Моделирование:**\n",
+    "   - Протестировать как простые модели (линейная регрессия, дерево решений), так и более сложные (Random Forest, XGBoost)\n",
+    "   - Отдавать предпочтение нелинейным моделям, так как они лучше справляются со сложными зависимостями\n",
+    "\n",
+    "3. **Оценка моделей:**\n",
+    "   - Использовать метрики MAE и R² для оценки точности\n",
+    "   - Применять перекрёстную валидацию для проверки стабильности моделей на различных подвыборках данных\n",
+    "\n",
+    "Правильная обработка данных и выбор моделей критически важны для достижения высокой точности прогноза\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.2 Подготовка к обучению"
    ]
   },
@@ -10065,11 +10082,6 @@
     "3. **Итог** \n",
     "   - На основе производительности и баланса между результатами на обучающей и тестовой выборках, LightGBM с GridSearchCV является наиболее перспективной моделью для данного набора данных. Либо еще порабаотать с подкготвкой данных и подбором признаков и парамметров\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
